--- a/client/css/style.css
+++ b/client/css/style.css
@@ -51,12 +51,36 @@ button {
 
 .button--toolbar-container {
   padding: 12px;
+  position: relative;
 }
 
 .button--toolbar {
   width: 54px;
   height: 54px;
   padding: 0;
+}
+
+.tooltip {
+  position: absolute;
+  visibility: hidden;
+  top: 65%;
+  left: 90%;
+  min-width: 240px;
+  text-align: left;
+  background: grey;
+  z-index: 3;
+  border-radius: 3px;
+  font-size: 14px;
+  padding: 6px 8px;
+  transition: 0.5s all ease;
+  opacity: 0;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.button--toolbar-container:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+  left: 75%;
 }
 
 .overlay {
