--- a/client/css/style.css
+++ b/client/css/style.css
@@ -337,35 +337,47 @@ button {
 
 #tilesheet-container {
   margin-bottom: 25px;
-  margin-top: 0px;
+  margin-top: -5px;
 }
 
 #canvas--tilesheet {
   margin-top: 0px;
+  width: 90%;
 }
 
 #tilesheet-selection-container {
   width: 90%;
   text-align: left;
   margin: 0px auto;
+  background-color: black;
+  height: 50px;
+  padding-top: 3px;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+#tilesheet-selection-container::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: transparent;
+}
+
+#tilesheet-selection-container::-webkit-scrollbar {
+	height: 10px;
+	background-color: transparent;
+}
+
+#tilesheet-selection-container::-webkit-scrollbar-thumb {
+	background-color: #000000;
+	border: 2px solid #555555;
 }
 
 .tilesheet-selection {
-  position: relative;
-  background-color: #aca8a8;
-  width: 40px;
-  padding: 10px;
+  padding: 12px 10px 10px 10px;
+  margin: 0px 2px;
   white-space: nowrap;
   overflow: hidden;
-  float: left;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  margin-left: -5px;
-}
-
-#tilesheet-selection-container div:not(:first-child) {
-  margin-left: -10px;
-  overflow-y: hidden;
+  display: inline-block;
 }
 
 .tilesheet-selection:hover {
@@ -373,8 +385,7 @@ button {
 }
 
 .tilesheet-active {
-  background-color: #4435b9;
-  width: auto;
+  border-top: 3px solid #4435b9;
   z-index: 3;
 }
 
